# Mastering-PyTorch

./: README.md
01_overview_deep_learning/: mnist_pytorch.ipynb
02_combining_cnns_and_lstms/: image_captioning_pytorch.ipynb
03_deep_cnn_architectures/: DenseNetBlock.ipynb  GoogLeNet.ipynb  ResNetBlock.ipynb  lenet.ipynb  transfer_learning_alexnet.ipynb  vgg13_pretrained_run_inference.ipynb
04_deep_recurrent_net_architectures/: lstm.ipynb  rnn.ipynb
05_hybrid_advanced_models/: rand_wire_nn.ipynb  transformer.ipynb
06_music_and_text_generation_using_pytorch/: music_generation.ipynb  text_generation.ipynb
07_neural_style_transfer/: neural_style_transfer.ipynb
08_deep_covolutional_gans/: dcgan.ipynb  pix2pix_architecture.ipynb
09_deep_reinforcement_learning/: pong.ipynb
10_operationalizing_pytorch_models_into_production/: convnet.onnx  convnet.pb  convnet.pth  convnet.py  mnist_pytorch.ipynb  model_scripting.ipynb  model_tracing.ipynb  onnx.ipynb  requirements.txt  run_inference.ipynb
10_operationalizing_pytorch_models_into_production/cpp_convnet/: CMakeLists.txt  cpp_convnet.cpp
11_distributed_training/: convnet_distributed.py  convnet_undistributed.py
12_pytorch_and_automl/: automl-pytorch.ipynb
13_pytorch_and_explainable_ai/: captum_interpretability.ipynb  pytorch_interpretability.ipynb
14_rapid_prototyping_with_pytorch/: fastai.ipynb  pytorch_lightning.ipynb
Chapter02/: image_captioning_pytorch.ipynb
Chapter03/: lenet.ipynb  transfer_learning_alexnet.ipynb  vgg13_pretrained_run_inference.ipynb
Chapter04/: lstm.ipynb
(+19 files in other folders)
